app.css
/* Global */

html {
    background: #0f1114;
    overflow-y: auto;
}

body {
    font-family: 'Crimson Pro', serif;
    background: none;
    overflow-y: hidden;
    
    /* overflow-x: hidden;
    margin-left: calc(100vw - 100%); */
}

html, body {
    overflow-x: hidden;
    margin-left: calc(100vw - 100%);
}

a {
    color: #0f1114;
}

a:hover {
    color: #fdfdff;
    text-decoration-thickness: .7px;
}

/* Global Padding */

/* .contentMobile {
    margin-top: 50px;
    margin-bottom: 50px;
} */

.sectionMargins {
    margin-top: 120px;
    margin-bottom: 120px;
}
.contentEnd {
    margin-top: 120px;
    margin-bottom: 30px;
}
.contentStart {
    margin-bottom: 120px;
    margin-top: 10px;
}

/* FLOATING CTA */

#cf { 
    display: flex;
    /* justify-content: center; */
    align-items: center;
}

button {
    z-index: 10;
}

.btn img {
    
    width: 10em;
    transform: translateY(-290%);
    /* transform: translateX(109%); */
    justify-content: center;
    /* transform: translateX(center); */
}

.btnDefault {
    display: flex;
    
}

.btnHover {
 display: flex;
 transform: translateY(-190%) !important;
 
}

#cf img {
    -webkit-transition: opacity .2s ease-in-out;
    -moz-transition: opacity .2s ease-in-out;
    -o-transition: opacity .2s ease-in-out;
    transition: opacity .2s ease-in-out;
}
  
#cf .btnDefault:hover {
    opacity:0;
}

button:focus {
    z-index: 1 !important;
    border-color: #0f111400;
    box-shadow: none !important;
}

.btn-check:focus+.btn, .btn:focus {
    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0%);
}

/* Hero/Large Backgrounds */

.hero {
    background-image: url(./assets/imgs/hero.jpg);
    background-size: cover;
    height: 113vh;
    width: 100%;
    background-position: center;
}

.intro {
    background-image: url(./assets/imgs/intro.jpg);
    background-size: cover;
    height: 105vh;
    width: 100%;
    background-position: center;
}

.westportBg {
    background-image: url(./assets/imgs/westport.jpg);
    background-size: cover;
    height: 75vh;
    width: 100%;
    background-position: center;
}

/* Global Text Tyles */


p {
    font-weight: 200;
    font-size: 1.45rem;
    line-height: 1.8;
}

h1, h2 {
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 600;
    font-size: 2.6rem;
    letter-spacing: .1rem;
    line-height: 2.8rem ;
}

.blurb h2 {
    color: #0f1114;
    
}

 .blurb-w h2 {
    color: #fdfdff;
    /* font-weight: 600;
    font-size: 2.6rem; */
    letter-spacing: .1rem;
    line-height: 2.8rem ;
    
}

.heading h2 {
    color: #fdfdff;
    /* font-weight: 600;
    font-size: 2.6rem; */
    letter-spacing: .1rem;
    line-height: 2.8rem ;
}

.blurb p {
    color: #0f1114;
}

.blurb-w p {
    color: #fdfdff;
}

/* Section Text */

.hero h1 {
    margin-bottom: 22%;
    color: #fdfdff;
    font-weight: 700;
    font-size: 2.4rem;
    letter-spacing: .3rem;
    line-height: 2.8rem ;
 }

.intro h1 {
    margin-top: 15%;
    color: #f2a230;
    font-weight: 600;
    font-size: 3.1rem;
    letter-spacing: .2rem;
    line-height: 2.8rem ;
}

.intro p {
    margin-top: 15%;
    color: #fdfdff;
    /* letter-spacing: .05rem;
    line-height: 2.4rem; */
    /* width: 82.5%; */
}

.surf.inv p {
    color: #9cceb6;
}

.features{
    color: #9cceb6;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 600;
    font-size: 1.8rem;
    letter-spacing: .1rem;
    line-height: 1.8rem ;
 }

.yearRound h3{
    color: #d6d5c9;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1.8rem;
    letter-spacing: .18rem;
    line-height: 1.8rem ;
 }

 .westport p{
    font-weight: 300;
    /* font-size: 1.3rem;
    line-height: 1.4; */

}

 .yearRound h4{
    color: #f2a230;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1.5rem;
    letter-spacing: .15rem;
    line-height: 1.8rem ;
 }

 .blurb-r p {
    color: #fdfdff;
    font-weight: 100;
    font-size: 1.2rem;
    line-height: 1.3;
}

#mainFooter h2 {
    color: #fdfdff;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1.3rem;
    letter-spacing: .1rem;
    line-height: 1.1rem;
}
#mainFooter h3 {
    color: #fdfdff;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1.2rem;
    letter-spacing: .1rem;
    line-height: 2rem;
}



/* h1 {
    font-family: 'Proxima Nova', sans-serif;
} */

/* .hero div {
    background-image: url("/assets/imgs/hero.jpg");
    background-color: #0f1114;
    
} */


/* Containers */


#overlap .surf {
    background: #9cceb6;
    width: 530px;
    position: relative;
    float: left;
    margin-left: 30px;
    opacity: 98%;
    z-index: 9;
}

#overlap .surf.inv {
    background: none;
    width: 100%;
    position: relative;
    float: none;
    margin-left: 0;
    opacity: 98%;
    z-index: 9;
}

#overlap .hotel {
    background: #f2a230;
    width: 480px;
    position: relative;
    float: left;
    margin-left: 50px;
    opacity: 98%;
    z-index: 9;
}

#overlap .grounds {
    background: #e2642e;
    width: 480px;
    position: relative;
    float: right;
    margin-right: 50px;
    opacity: 98%;
    margin-top: 200px;
}

#overlap .westport {
    background: #d6d5c9;
    width: 480px;
    position: relative;
    transform: translateX(20%);
    opacity: 98%;
}

#book { 
    background: #181F22  
}

#overlap .review1 {
    background: #2a6f76;
    width: 360px;
    /* position: relative; */
    float: ;
    /* margin-right: 50px; */
    opacity: 98%;
    margin-top: -100px;
    z-index: -1 !important;

}

#overlap .review2 {
    background: #2a6f76;
    width: 360px;
    position: relative;
    float: ;
    /* margin-right: 50px; */
    opacity: 98%;
    margin-bottom: -90px;
    z-index: -1 !important;
}
/* ... */

